--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ E-mail: <a href="mailto:linlin00@sjtu.edu.cn">linlin00@sjtu.edu.cn</a>; <a href=
 <p>My research interests include machine learning applications in power system, time series prediction, uncertainty quantification, and decision making under uncertainty. Currently, I am focusing on the interplay between forecasting and decision making.</p>
 <h2>Supervision</h2>
 <ul>
-<li><p>Jiaqing Wu, master student at SJTU (co-advised with Prof. Jie Gu);</p>
+<li><p>Jiaqing Wu, master student at SJTU (co-advise with Prof. Jie Gu);</p>
 </li>
-<li><p>Yaojian Wang, master student at SJTU (co-advised with Prof. Jie Gu).</p>
+<li><p>Yaojian Wang, master student at SJTU (co-advise with Prof. Jie Gu).</p>
 </li>
 </ul>
 <h2>News</h2>
