--- a/publications.html
+++ b/publications.html
@@ -69,7 +69,7 @@ Long Cai, <b>Honglin Wen</b>, Jie Gu, Jinghuan Ma, and Zhijian Jin <br />
 </li>
 </ul>
 <ul>
-<li><p><a href="http://dx.doi.org/10.36227/techrxiv.17925911.v1">POptimal Adaptive Prediction Intervals for Electricity Load Forecasting in Distribution Systems via Reinforcement Learning</a> <br />
+<li><p><a href="http://dx.doi.org/10.36227/techrxiv.17925911.v1">Optimal Adaptive Prediction Intervals for Electricity Load Forecasting in Distribution Systems via Reinforcement Learning</a> <br />
 Yufan Zhang, <b>Honglin Wen</b>, Qiuwei Wu, and Qian Ai<br /> 
 <i> Techrxiv Preprint</i> <br /></p>
 </li>
