--- a/publications.html
+++ b/publications.html
@@ -20,7 +20,7 @@
 <h2>Publications</h2>
 <ul>
 <li><p><a href="http://dx.doi.org/10.1109/TSTE.2022.3141549">Sparse Variational Gaussian Process based Day-ahead Probabilistic Wind Power Forecasting</a> <br />
-<b>Honglin Wen</b>, Jinghuan Ma, Jie Gu, Lyuzerui Yuan, and Zhijian Jing <br />
+<b>Honglin Wen</b>, Jinghuan Ma, Jie Gu, Lyuzerui Yuan, and Zhijian Jin <br />
 <i> IEEE Transactions on Sustainable Energy</i> (IEEE TSTE 2022)</p>
 </li>
 </ul>
@@ -32,7 +32,7 @@ Xiaoguang Zhu, Ye Zhu, Haoyu Wang, <b>Honglin Wen</b>, Yan Yan, and Peilin Liu <
 </ul>
 <ul>
 <li><p><a href="http://dx.doi.org/10.1109/TSG.2021.3066567">Probabilistic Load Forecasting via Neural Basis Expansion Model Based Prediction Intervals</a> <br />
-<b>Honglin Wen</b>, Jie Gu, Jinghuan Ma, Lyuzerui Yuan, and Zhijian Jing <br />
+<b>Honglin Wen</b>, Jie Gu, Jinghuan Ma, Lyuzerui Yuan, and Zhijian Jin <br />
 <i> IEEE Transactions on Smart Grid</i> (IEEE TSG 2021)</p>
 </li>
 </ul>
