--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 E-mail: <a href="mailto:linlin00@sjtu.edu.cn">linlin00@sjtu.edu.cn</a>; <a href="mailto:hongwen@dtu.dk">hongwen@dtu.dk</a><br /></p>
 </td></tr></table>
 <h2>Biography</h2>
-<p>Hi, I am a PhD candidate at Shanghai Jiao Tong University, advised by Prof. Zhijian Jin, and co-advised by Prof. Jie Gu and Prof. Jinghuan Ma. Previously, I obtained my B.E. from EE, Shanghai Jiao Tong University (top 5%). Since April 2021, I am on a research stay at operation research group, Technical University of Denmark, supervised by Prof. <a href="https://pierrepinson.com/">Pirerre Pinson</a>. </p>
+<p>Hi, I am a PhD candidate at Shanghai Jiao Tong University, advised by Prof. Zhijian Jin, and co-advised by Prof. Jie Gu and Prof. Jinghuan Ma. Previously, I obtained my B.E. from EE, Shanghai Jiao Tong University (top 5%). Since April 2021, I am on a research stay at operation research group, Technical University of Denmark, supervised by Prof. <a href="https://pierrepinson.com/">Pierre Pinson</a>. </p>
 <p>My research interests include machine learning applications in power system, time series prediction, uncertainty quantification, and decision making under uncertainty. Currently, I am focusing on the interplay between forecasting and decision making.</p>
 <h2>Supervision</h2>
 <ul>
@@ -37,7 +37,7 @@ E-mail: <a href="mailto:linlin00@sjtu.edu.cn">linlin00@sjtu.edu.cn</a>; <a href=
 </ul>
 <h2>News</h2>
 <ul>
-<li><p>Jan, 2022: Work on wind power probabilistic forecasting based on SVGP is accpted by IEEE TSTE.</p>
+<li><p>Jan, 2022: Work on wind power probabilistic forecasting based on SVGP is accepted by IEEE TSTE.</p>
 </li>
 <li><p>Jan, 2022: Work collaborated with Yufan Zhang on adaptive prediction interval is submitted to IEEE TSG; see it on <a href="https://doi.org/10.36227/techrxiv.17925911.v1">Techrxiv</a>.</p>
 </li>
@@ -47,7 +47,7 @@ E-mail: <a href="mailto:linlin00@sjtu.edu.cn">linlin00@sjtu.edu.cn</a>; <a href=
 </li>
 <li><p>Apr, 2021: Starting the research stay at OR group of DTU!</p>
 </li>
-<li><p>Mar, 2021: Work on prediction interval is accpted by IEEE TSG.</p>
+<li><p>Mar, 2021: Work on prediction interval is accepted by IEEE TSG.</p>
 </li>
 </ul>
 <h2>Selected Honors &amp; Awards</h2>
