--- a/publications.html
+++ b/publications.html
@@ -25,7 +25,7 @@
 </li>
 </ul>
 <ul>
-<li><p><a href="Skeleton">Sequence and RGB Frame Based Multi-Modality Feature Fusion Network for Action Recognition</a> <br />
+<li><p>Skeleton Sequence and RGB Frame Based Multi-Modality Feature Fusion Network for Action Recognition <br />
 Xiaoguang Zhu, Ye Zhu, Haoyu Wang, <b>Honglin Wen</b>, Yan Yan, and Peilin Liu <br />
 <i> ACM Transactions on Multimedia Computing Communications and Applications</i> (ACM TOMM 2021) <br /></p>
 </li>
