--- a/publications.html
+++ b/publications.html
@@ -19,7 +19,7 @@
 <td id="layout-content">
 <h2>Publications</h2>
 <ul>
-<li><p><a href="http://dx.doi.org/10.1109/TSTE.2022.3141549">Sparse Variational Gaussian Process based Day-ahead Probabilistic Wind Power Forecasting</a> <br />
+<li><p><a href="http://dx.doi.org/10.1109/TSTE.2022.3141549">Sparse Variational Gaussian Process based Day-ahead Probabilistic Wind Power Forecasting</a> | <a href="https://github.com/honglinwen/Wind-power-forecasting-based-on-SVGP">GitHub</a><br />
 <b>Honglin Wen</b>, Jinghuan Ma, Jie Gu, Lyuzerui Yuan, and Zhijian Jin <br />
 <i> IEEE Transactions on Sustainable Energy</i> (IEEE TSTE 2022)</p>
 </li>
