--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ E-mail: <a href="mailto:linlin00@sjtu.edu.cn">linlin00@sjtu.edu.cn</a>; <a href=
 </ul>
 <h2>News</h2>
 <ul>
+<li><p>Mar, 2022: Work on probabilistic forecasting with missing values is submitted to IJF; see it on <a href="https://doi.org/10.48550/arXiv.2203.08252">Arxiv</a>.</p>
+</li>
 <li><p>Jan, 2022: Work on wind power probabilistic forecasting based on SVGP is accepted by IEEE TSTE.</p>
 </li>
 <li><p>Jan, 2022: Work collaborated with Yufan Zhang on adaptive prediction interval is submitted to IEEE TSG; see it on <a href="https://doi.org/10.36227/techrxiv.17925911.v1">Techrxiv</a>.</p>
