--- a/publications.html
+++ b/publications.html
@@ -25,7 +25,7 @@
 </li>
 </ul>
 <ul>
-<li><p>Skeleton Sequence and RGB Frame Based Multi-Modality Feature Fusion Network for Action Recognition <br />
+<li><p><a href="https://doi.org/10.1145/3491228">Skeleton Sequence and RGB Frame Based Multi-Modality Feature Fusion Network for Action Recognition</a> <br />
 Xiaoguang Zhu, Ye Zhu, Haoyu Wang, <b>Honglin Wen</b>, Yan Yan, and Peilin Liu <br />
 <i> ACM Transactions on Multimedia Computing Communications and Applications</i> (ACM TOMM 2021) <br /></p>
 </li>
@@ -62,6 +62,12 @@ Long Cai, <b>Honglin Wen</b>, Jie Gu, Jinghuan Ma, and Zhijian Jin <br />
 </li>
 </ul>
 <h2>Preprints</h2>
+<ul>
+<li><p><a href="https://doi.org/10.48550/arXiv.2203.08252">Wind energy forecasting with missing values within a fully conditional specification framework</a> <br />
+<b>Honglin Wen</b>, Pierre Pinson, Jie Gu, and Zhijian Jin<br />
+<i> Arxiv Preprint</i> <br /></p>
+</li>
+</ul>
 <ul>
 <li><p><a href="http://dx.doi.org/10.36227/techrxiv.16866280">Continuous and Distribution-free Probabilistic Wind Power Forecasting</a> <br />
 <b>Honglin Wen</b>, Pierre Pinson, Jinghuan Ma, Jie Gu, and Zhijian Jin<br />
