--- a/publications.html
+++ b/publications.html
@@ -69,15 +69,15 @@ Long Cai, <b>Honglin Wen</b>, Jie Gu, Jinghuan Ma, and Zhijian Jin <br />
 </li>
 </ul>
 <ul>
-<li><p><a href="http://dx.doi.org/10.36227/techrxiv.16866280">Continuous and Distribution-free Probabilistic Wind Power Forecasting</a> <br />
+<li><p><a href="https://arxiv.org/abs/2206.02433">Continuous and Distribution-free Probabilistic Wind Power Forecasting: A Conditional Normalizing Flow Approach</a> | <a href="https://github.com/honglinwen/Conditional-normalizing-flow-for-wind-power-forecasting">GitHub</a><br />
 <b>Honglin Wen</b>, Pierre Pinson, Jinghuan Ma, Jie Gu, and Zhijian Jin<br />
-<i> Techrxiv Preprint</i> <br /></p>
+<i> Arxiv Preprint</i> <br /></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="http://dx.doi.org/10.36227/techrxiv.17925911.v1">Optimal Adaptive Prediction Intervals for Electricity Load Forecasting in Distribution Systems via Reinforcement Learning</a> <br />
+<li><p><a href="https://arxiv.org/abs/2205.08698">Optimal Adaptive Prediction Intervals for Electricity Load Forecasting in Distribution Systems via Reinforcement Learning</a> <br />
 Yufan Zhang, <b>Honglin Wen</b>, Qiuwei Wu, and Qian Ai<br /> 
-<i> Techrxiv Preprint</i> <br /></p>
+<i> Arxiv Preprint</i> <br /></p>
 </li>
 </ul>
 </td>
