--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@ E-mail: <a href="mailto:linlin00@sjtu.edu.cn">linlin00@sjtu.edu.cn</a>; <a href=
 </ul>
 <h2>News</h2>
 <ul>
+<li><p>Jun, 2022: Work on distribution-free probabilistic forecasting is revised and resubmitted to IEEE TSTE; see it on <a href="https://arxiv.org/abs/2206.02433">Arxiv</a>.</p>
+</li>
+<li><p>May, 2022: Work collaborated with Yufan Zhang on adaptive prediction interval is revised and resubmitted to IEEE TSG; see it on <a href="https://arxiv.org/abs/2205.08698">Arxiv</a>.</p>
+</li>
 <li><p>Mar, 2022: Work on probabilistic forecasting with missing values is submitted to IJF; see it on <a href="https://doi.org/10.48550/arXiv.2203.08252">Arxiv</a>.</p>
 </li>
 <li><p>Jan, 2022: Work on wind power probabilistic forecasting based on SVGP is accepted by IEEE TSTE.</p>
