--- a/publications.html
+++ b/publications.html
@@ -19,6 +19,18 @@
 <td id="layout-content">
 <h2>Publications</h2>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2205.08698">Optimal Adaptive Prediction Intervals for Electricity Load Forecasting in Distribution Systems via Reinforcement Learning</a> <br />
+Yufan Zhang, <b>Honglin Wen</b>, Qiuwei Wu, and Qian Ai<br /> 
+<i> IEEE Transactions on Smart Grid</i> (IEEE TSG 2022)</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2206.02433">Continuous and Distribution-free Probabilistic Wind Power Forecasting: A Conditional Normalizing Flow Approach</a> | <a href="https://github.com/honglinwen/Conditional-normalizing-flow-for-wind-power-forecasting">GitHub</a><br />
+<b>Honglin Wen</b>, Pierre Pinson, Jinghuan Ma, Jie Gu, and Zhijian Jin<br />
+<i> IEEE Transactions on Sustainable Energy</i> (IEEE TSTE 2022) <br /></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="http://dx.doi.org/10.1109/TSTE.2022.3141549">Sparse Variational Gaussian Process based Day-ahead Probabilistic Wind Power Forecasting</a> | <a href="https://github.com/honglinwen/Wind-power-forecasting-based-on-SVGP">GitHub</a><br />
 <b>Honglin Wen</b>, Jinghuan Ma, Jie Gu, Lyuzerui Yuan, and Zhijian Jin <br />
 <i> IEEE Transactions on Sustainable Energy</i> (IEEE TSTE 2022)</p>
@@ -69,14 +81,14 @@ Long Cai, <b>Honglin Wen</b>, Jie Gu, Jinghuan Ma, and Zhijian Jin <br />
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2206.02433">Continuous and Distribution-free Probabilistic Wind Power Forecasting: A Conditional Normalizing Flow Approach</a> | <a href="https://github.com/honglinwen/Conditional-normalizing-flow-for-wind-power-forecasting">GitHub</a><br />
-<b>Honglin Wen</b>, Pierre Pinson, Jinghuan Ma, Jie Gu, and Zhijian Jin<br />
+<li><p><a href="https://arxiv.org/abs/2210.04152">A Contextual Bandit Approach for Value-oriented Prediction Interval Forecasting</a> <br />
+Yufan Zhang, <b>Honglin Wen</b>, Qiuwei Wu<br /> 
 <i> Arxiv Preprint</i> <br /></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2205.08698">Optimal Adaptive Prediction Intervals for Electricity Load Forecasting in Distribution Systems via Reinforcement Learning</a> <br />
-Yufan Zhang, <b>Honglin Wen</b>, Qiuwei Wu, and Qian Ai<br /> 
+<li><p>Targeted Demand Response: Formulation, LMP Implications, and Fast Algorithms <br />
+Yufan Zhang, <b>Honglin Wen</b>, Tao Feng, and Yize Chen <br /> 
 <i> Arxiv Preprint</i> <br /></p>
 </li>
 </ul>
