--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="hlwen_photo.jpg" alt="alt text" width="120px" height="160px" />&nbsp;</td>
-<td align="left"><p>PhD candidate,<br /> Department of Electrical Engineering, <br /> Shanghai Jiao Tong University <br />
-E-mail: <a href="mailto:linlin00@sjtu.edu.cn">linlin00@sjtu.edu.cn</a>; <a href="mailto:hongwen@dtu.dk">hongwen@dtu.dk</a><br /></p>
+<td align="left"><p>PostDoc,<br /> Department of Electrical Engineering, <br /> Shanghai Jiao Tong University <br />
+E-mail: <a href="mailto:linlin00@sjtu.edu.cn">linlin00@sjtu.edu.cn</a>; <br /></p>
 </td></tr></table>
 <h2>Biography</h2>
-<p>Hi, I am a PhD candidate at Shanghai Jiao Tong University, advised by Prof. Zhijian Jin, and co-advised by Prof. Jie Gu and Prof. Jinghuan Ma. Previously, I obtained my B.E. from EE, Shanghai Jiao Tong University (top 5%). Since April 2021, I am on a research stay at operation research group, Technical University of Denmark, supervised by Prof. <a href="https://pierrepinson.com/">Pierre Pinson</a>. </p>
-<p>My research interests include machine learning applications in power system, time series prediction, uncertainty quantification, and decision making under uncertainty. Currently, I am focusing on the interplay between forecasting and decision making.</p>
+<p>Hi, I am a PostDoc researcher at Shanghai Jiao Tong University, mentored by Prof. Zhijian Jin. Previously, I obtained my B.E. and Ph.D. from EE, Shanghai Jiao Tong University. I was on a research stay at operation research group, Technical University of Denmark, supervised by Prof. <a href="https://pierrepinson.com/">Pierre Pinson</a> in 2021. </p>
+<p>My research interests include predictive and prescriptive analytics especially machine learning applications for power systems, energy forecasting, electricity markets, and decision making under uncertainty. Currently, I am focusing on the interplay between forecasting and decision making.</p>
 <h2>Supervision</h2>
 <ul>
 <li><p>Jiaqing Wu, master student at SJTU (co-advise with Prof. Jie Gu);</p>
@@ -37,7 +37,15 @@ E-mail: <a href="mailto:linlin00@sjtu.edu.cn">linlin00@sjtu.edu.cn</a>; <a href=
 </ul>
 <h2>News</h2>
 <ul>
-<li><p>Jun, 2022: Work on distribution-free probabilistic forecasting is revised and resubmitted to IEEE TSTE; see it on <a href="https://arxiv.org/abs/2206.02433">Arxiv</a>.</p>
+<li><p>Nov, 2022: Work on targeted demand response is submitted to IEEE TPWRS.</p>
+</li>
+<li><p>Nov, 2022: Work on adaptive prediction interval is accepted by IEEE TSG.</p>
+</li>
+<li><p>Oct, 2022: Work on probabilistic forecasting with missing values is revised and resubmitted to IJF; see it on <a href="https://arxiv.org/abs/2203.08252v2">Arxiv</a></p>
+</li>
+<li><p>Oct, 2022: Work on value-oriented forecasting is submitted to IEEE TSG; see it on <a href="https://arxiv.org/abs/2210.04152">Arxiv</a>.</p>
+</li>
+<li><p>Jul, 2022: Work on distribution-free probabilistic forecasting is accepted by IEEE TSTE; see it on <a href="https://arxiv.org/abs/2206.02433">Arxiv</a>.</p>
 </li>
 <li><p>May, 2022: Work collaborated with Yufan Zhang on adaptive prediction interval is revised and resubmitted to IEEE TSG; see it on <a href="https://arxiv.org/abs/2205.08698">Arxiv</a>.</p>
 </li>
@@ -46,14 +54,6 @@ E-mail: <a href="mailto:linlin00@sjtu.edu.cn">linlin00@sjtu.edu.cn</a>; <a href=
 <li><p>Jan, 2022: Work on wind power probabilistic forecasting based on SVGP is accepted by IEEE TSTE.</p>
 </li>
 <li><p>Jan, 2022: Work collaborated with Yufan Zhang on adaptive prediction interval is submitted to IEEE TSG; see it on <a href="https://doi.org/10.36227/techrxiv.17925911.v1">Techrxiv</a>.</p>
-</li>
-<li><p>Nov, 2021: Work on distribution-free probabilistic forecasting is submitted to IEEE TSTE; see it on <a href="https://doi.org/10.36227/techrxiv.16866280.v1">Techrxiv</a>.</p>
-</li>
-<li><p>Oct, 2021: Work collaborated with Xiaoguang Zhu on action recognition is accepted by ACM TOMM!</p>
-</li>
-<li><p>Apr, 2021: Starting the research stay at OR group of DTU!</p>
-</li>
-<li><p>Mar, 2021: Work on prediction interval is accepted by IEEE TSG.</p>
 </li>
 </ul>
 <h2>Selected Honors &amp; Awards</h2>
