--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@ E-mail: <a href="mailto:linlin00@sjtu.edu.cn">linlin00@sjtu.edu.cn</a>; <br /></
 </ul>
 <h2>News</h2>
 <ul>
+<li><p>May, 2023: Work on forecasting with missing values (for both MAR and MNAR cases) is submitted to IEEE TSTE; see it on <a href="https://arxiv.org/abs/2305.14662">Arxiv</a>.</p>
+</li>
+<li><p>Jan, 2023: Work on forecasting with missing values is accpeted by International Journal of Forecasting; see it on <a href="http://dx.doi.org/10.1016/j.ijforecast.2022.12.006">Elsevier</a>,</p>
+</li>
 <li><p>Nov, 2022: Work on targeted demand response is submitted to IEEE TPWRS.</p>
 </li>
 <li><p>Nov, 2022: Work on adaptive prediction interval is accepted by IEEE TSG.</p>
