--- a/publications.html
+++ b/publications.html
@@ -19,6 +19,12 @@
 <td id="layout-content">
 <h2>Publications</h2>
 <ul>
+<li><p><a href="http://dx.doi.org/10.1016/j.ijforecast.2022.12.006">Wind energy forecasting with missing values within a fully conditional specification framework</a> <br />
+<b>Honglin Wen</b>, Pierre Pinson, Jie Gu, and Zhijian Jin<br />
+<i> International Journal of Forecasting</i> (IJF 2023) <br /></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2205.08698">Optimal Adaptive Prediction Intervals for Electricity Load Forecasting in Distribution Systems via Reinforcement Learning</a> <br />
 Yufan Zhang, <b>Honglin Wen</b>, Qiuwei Wu, and Qian Ai<br /> 
 <i> IEEE Transactions on Smart Grid</i> (IEEE TSG 2022)</p>
@@ -75,8 +81,8 @@ Long Cai, <b>Honglin Wen</b>, Jie Gu, Jinghuan Ma, and Zhijian Jin <br />
 </ul>
 <h2>Preprints</h2>
 <ul>
-<li><p><a href="https://doi.org/10.48550/arXiv.2203.08252">Wind energy forecasting with missing values within a fully conditional specification framework</a> <br />
-<b>Honglin Wen</b>, Pierre Pinson, Jie Gu, and Zhijian Jin<br />
+<li><p><a href="https://arxiv.org/abs/2305.14662">Probabilistic Wind Power Forecasting with Missing Values via Adaptive Quantile Regression</a> <br />
+<b>Honglin Wen</b><br />
 <i> Arxiv Preprint</i> <br /></p>
 </li>
 </ul>
